--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-hacker
 title: Random Scraps
 desciption: GFL FAQs first. Might add things later.
+
+Main pages
+
+[GFL Lounge FAQs](/GFL/)
