--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ GFL/assets/images/Thumbs.db
 univasset/images/Thumbs.db
 PNC/assets/images/arma/Thumbs.db
 PNC/assets/images/classes/Thumbs.db
+PNC/assets/images/algorithms/tabs/Thumbs.db
+PNC/assets/images/algorithms/Thumbs.db
