--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     // https://stackoverflow.com/questions/76125833/container-type-property-and-container-rule-are-not-recognized-by-vs-code
-    "css.customData": [".vscode/custom-css.json"]
+    "css.customData": [".vscode/custom-css.json"],
+    // https://github.com/microsoft/vscode-html-languageservice/blob/main/docs/customData.md
+    "html.customData": ["univasset/scripts/include/index.json"]
 }
