--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ PNC/assets/images/arma/Thumbs.db
 PNC/assets/images/classes/Thumbs.db
 PNC/assets/images/algorithms/tabs/Thumbs.db
 PNC/assets/images/algorithms/Thumbs.db
+PNC/assets/images/spirits/Thumbs.db
